--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ember-localforage",
-  "version": "0.0.0",
+  "name": "ember-cli-localforage",
+  "version": "1.0.0",
   "description": "The default blueprint for ember-cli addons.",
   "keywords": [
     "ember-addon"
@@ -18,6 +18,8 @@
     "test": "ember try:each"
   },
   "dependencies": {
+    "broccoli-funnel": "^1.2.0",
+    "broccoli-merge-trees": "^2.0.0",
     "ember-cli-babel": "^6.0.0",
     "localforage": "^1.5.0"
   },
@@ -38,6 +40,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
+    "ember-route-action-helper": "^2.0.3",
     "ember-source": "~2.14.0-beta.1",
     "loader.js": "^4.2.3"
   },
