--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ember-cli-localforage",
   "version": "0.1.1",
+  "repository": "",
   "description": "The default blueprint for ember-cli addons.",
   "keywords": [
     "ember-addon"
@@ -11,7 +12,6 @@
     "doc": "doc",
     "test": "tests"
   },
-  "repository": "",
   "scripts": {
     "build": "ember build",
     "start": "ember server",
@@ -20,30 +20,32 @@
   "dependencies": {
     "broccoli-funnel": "^1.2.0",
     "broccoli-merge-trees": "^2.0.0",
-    "ember-cli-babel": "^6.0.0",
+    "ember-cli-babel": "^6.5.0",
+    "ember-cli-node-assets": "^0.2.2",
+    "fastboot-transform": "^0.1.1",
     "localforage": "^1.5.0"
   },
   "devDependencies": {
-    "broccoli-asset-rev": "^2.4.5",
+    "broccoli-asset-rev": "^2.5.0",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~2.14.0-beta.2",
-    "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-eslint": "^3.0.0",
-    "ember-cli-htmlbars": "^2.0.1",
+    "ember-cli-dependency-checker": "^2.0.1",
+    "ember-cli-eslint": "^4.1.0",
+    "ember-cli-htmlbars": "^2.0.2",
     "ember-cli-htmlbars-inline-precompile": "^0.4.3",
-    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-inject-live-reload": "^1.6.1",
     "ember-cli-qunit": "^4.0.0",
     "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-shims": "^1.1.0",
-    "ember-cli-sri": "^2.1.0",
+    "ember-cli-sri": "^2.1.1",
     "ember-cli-uglify": "^1.2.0",
-    "ember-disable-prototype-extensions": "^1.1.0",
+    "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
-    "ember-resolver": "^4.0.0",
+    "ember-resolver": "^4.2.1",
     "ember-route-action-helper": "^2.0.3",
     "ember-source": "~2.14.0-beta.1",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.5.1"
   },
   "engines": {
     "node": ">= 4"
