--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
   "name": "ember-cli-localforage",
   "version": "0.1.2",
-  "repository": "",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "Wrapper for localforage to add to ember plugins",
   "keywords": [
     "ember-addon"
   ],
   "license": "MIT",
-  "author": "",
+  "author": "Devonte Emokpae",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
+  "repository": "https://github.com/devotox/ember-cli-localforage",
   "scripts": {
     "build": "ember build",
     "start": "ember server",
-    "test": "ember try:each"
+    "test": "ember try:each",
+    "postrelease": "npm publish",
+    "release": "npm version patch",
+    "release-patch": "npm version patch",
+    "release-minor": "npm version minor",
+    "release-major": "npm version major",
+    "postversion": "git push && git push --tags",
+    "deploy:release": "npm run release; npm run deploy",
+    "deploy:setup": "git add -A; git commit -m \"Added ember-cli-github-pages addon\"; git checkout --orphan gh-pages; rm -rf `bash -c \"ls -a | grep -vE '.gitignore|.git|node_modules|bower_components|(^[.]{1,2}/?$)'\"`; touch .gitkeep; git add -A; git commit -m \"initial gh-pages commit\"; git checkout master",
+    "deploy": "ember github-pages:commit --message \"Deploy gh-pages from commit $(git rev-parse HEAD)\"; git push origin gh-pages; git checkout master"
   },
   "dependencies": {
     "broccoli-funnel": "^1.2.0",
@@ -26,31 +35,31 @@
     "localforage": "^1.5.0"
   },
   "devDependencies": {
-    "broccoli-asset-rev": "^2.5.0",
+    "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
-    "ember-cli": "~2.14.0-beta.2",
-    "ember-cli-dependency-checker": "^2.0.1",
-    "ember-cli-eslint": "^4.1.0",
-    "ember-cli-htmlbars": "^2.0.2",
-    "ember-cli-htmlbars-inline-precompile": "^0.4.3",
-    "ember-cli-inject-live-reload": "^1.6.1",
+    "ember-cli": "~2.16.0-beta.1",
+    "ember-cli-dependency-checker": "^2.0.0",
+    "ember-cli-eslint": "^4.0.0",
+    "ember-cli-github-pages": "^0.1.2",
+    "ember-cli-htmlbars": "^2.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.0",
+    "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.0.0",
-    "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-shims": "^1.1.0",
-    "ember-cli-sri": "^2.1.1",
-    "ember-cli-uglify": "^1.2.0",
+    "ember-cli-sri": "^2.1.0",
+    "ember-cli-uglify": "^2.0.0",
     "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
-    "ember-resolver": "^4.2.1",
-    "ember-route-action-helper": "^2.0.3",
-    "ember-source": "~2.14.0-beta.1",
-    "loader.js": "^4.5.1"
+    "ember-resolver": "^4.0.0",
+    "ember-source": "~2.16.0-beta.1",
+    "loader.js": "^4.2.3"
   },
   "engines": {
-    "node": ">= 4"
+    "node": "^4.5 || 6.* || >= 7.*"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "demoURL": "https://devotox.github.io/ember-cli-localforage",
   }
 }
