--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
   "repository": "https://github.com/devotox/ember-cli-localforage",
   "scripts": {
     "build": "ember build",
-    "start": "ember server",
-    "test": "ember try:each",
     "precommit": "lint-staged",
     "update": "ncu -u -a; yarn",
     "postrelease": "npm publish",
@@ -26,7 +24,10 @@
     "release-major": "npm version major",
     "postversion": "git push && git push --tags",
     "deploy:release": "npm run release; npm run deploy",
+    "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint ./*.js addon addon-test-support app config lib server test-support tests",
+    "start": "ember server",
+    "test": "ember try:each",
     "deploy:setup": "git add -A; git commit -m \"Added ember-cli-github-pages addon\"; git checkout --orphan gh-pages; rm -rf `bash -c \"ls -a | grep -vE '.gitignore|.git|node_modules|bower_components|([.]{1,2}/?$)'\"`; touch .gitkeep; git add -A; git commit -m \"initial gh-pages commit\"; git checkout master",
     "deploy": "ember github-pages:commit --message \"Deploy gh-pages from commit $(git rev-parse HEAD)\"; git push origin gh-pages; git checkout master",
     "format": "find app addon config tests -name '*.js' -type f | xargs prettier --write | xargs eslint --fix"
@@ -41,32 +42,32 @@
   "dependencies": {
     "broccoli-funnel": "^2.0.1",
     "broccoli-merge-trees": "^3.0.1",
-    "ember-cli-babel": "^6.16.0",
+    "ember-cli-babel": "^7.1.2",
     "ember-cli-node-assets": "^0.2.2",
     "fastboot-transform": "^0.1.3",
     "localforage": "^1.7.2"
   },
   "devDependencies": {
+    "@ember/optional-features": "^0.6.3",
     "broccoli-asset-rev": "^2.7.0",
-    "ember-ajax": "^3.1.0",
-    "ember-cli": "~3.3.0",
-    "ember-cli-dependency-checker": "^3.0.0",
+    "ember-cli": "~3.8.1",
+    "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^4.2.3",
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.8.2",
-    "ember-cli-qunit": "^4.3.2",
-    "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.1",
+    "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-qunit": "^3.4.1",
     "ember-resolver": "^5.0.1",
-    "ember-source": "~3.3.1",
+    "ember-source": "~3.8.0",
     "ember-source-channel-url": "^1.1.0",
-    "ember-try": "^1.0.0-beta.2",
+    "ember-try": "^1.0.0",
     "eslint-plugin-ember": "^5.2.0",
     "eslint-plugin-node": "^7.0.1",
     "loader.js": "^4.7.0"
