--- a/package.json
+++ b/package.json
@@ -8,29 +8,32 @@
   ],
   "license": "MIT",
   "author": "Devonte Emokpae",
+  "repository": "https://github.com/devotox/ember-cli-localforage",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
-  "repository": "https://github.com/devotox/ember-cli-localforage",
   "scripts": {
+    "test": "ember test",
+    "lint:js": "eslint .",
     "build": "ember build",
+    "start": "ember serve",
     "precommit": "lint-staged",
     "update": "ncu -u -a; yarn",
+    "test:all": "ember try:each",
     "postrelease": "npm publish",
     "release": "npm version patch",
+    "lint:hbs": "ember-template-lint .",
     "release-patch": "npm version patch",
     "release-minor": "npm version minor",
     "release-major": "npm version major",
     "postversion": "git push && git push --tags",
     "deploy:release": "npm run release; npm run deploy",
-    "lint:hbs": "ember-template-lint .",
-    "lint:js": "eslint ./*.js addon addon-test-support app config lib server test-support tests",
-    "start": "ember server",
-    "test": "ember try:each",
-    "deploy:setup": "git add -A; git commit -m \"Added ember-cli-github-pages addon\"; git checkout --orphan gh-pages; rm -rf `bash -c \"ls -a | grep -vE '.gitignore|.git|node_modules|bower_components|([.]{1,2}/?$)'\"`; touch .gitkeep; git add -A; git commit -m \"initial gh-pages commit\"; git checkout master",
+    "format": "find app addon config tests -name '*.js' -type f | xargs prettier --write | xargs eslint --fix",
+    "nearley": "nearleyc app/grammar/index.ne -o app/grammar/index.js; node app/grammar/parser.js; rm -rf app/grammar/index.js",
     "deploy": "ember github-pages:commit --message \"Deploy gh-pages from commit $(git rev-parse HEAD)\"; git push origin gh-pages; git checkout master",
-    "format": "find app addon config tests -name '*.js' -type f | xargs prettier --write | xargs eslint --fix"
+    "update:packages": "npx ncu -u -a --removeRange && yarn install --force --check-files --update-checksums --ignore-engines && yarn upgrade --force --ignore-engines",
+    "deploy:setup": "git add -A; git commit -m \"Added ember-cli-github-pages addon\"; git checkout --orphan gh-pages; rm -rf `bash -c \"ls -a | grep -vE '.gitignore|.git|node_modules|bower_components|([.]{1,2}/?$)'\"`; touch .gitkeep; git add -A; git commit -m \"initial gh-pages commit\"; git checkout master"
   },
   "lint-staged": {
     "*.{js,json,css}": [
@@ -40,37 +43,37 @@
     ]
   },
   "dependencies": {
-    "broccoli-funnel": "^2.0.1",
-    "broccoli-merge-trees": "^3.0.1",
-    "ember-cli-babel": "^7.1.2",
-    "ember-cli-node-assets": "^0.2.2",
-    "fastboot-transform": "^0.1.3",
-    "localforage": "^1.7.2"
+    "broccoli-funnel": "2.0.2",
+    "broccoli-merge-trees": "3.0.2",
+    "ember-cli-babel": "7.5.0",
+    "ember-cli-node-assets": "0.2.2",
+    "fastboot-transform": "0.1.3",
+    "localforage": "1.7.3"
   },
   "devDependencies": {
-    "@ember/optional-features": "^0.6.3",
-    "broccoli-asset-rev": "^2.7.0",
-    "ember-cli": "~3.8.1",
-    "ember-cli-dependency-checker": "^3.1.0",
-    "ember-cli-eslint": "^4.2.3",
-    "ember-cli-htmlbars": "^3.0.0",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
-    "ember-cli-inject-live-reload": "^1.8.2",
-    "ember-cli-sri": "^2.1.1",
-    "ember-cli-template-lint": "^1.0.0-beta.1",
-    "ember-cli-uglify": "^2.1.0",
-    "ember-disable-prototype-extensions": "^1.1.3",
-    "ember-export-application-global": "^2.0.0",
-    "ember-load-initializers": "^1.1.0",
-    "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-qunit": "^3.4.1",
-    "ember-resolver": "^5.0.1",
-    "ember-source": "~3.8.0",
-    "ember-source-channel-url": "^1.1.0",
-    "ember-try": "^1.0.0",
-    "eslint-plugin-ember": "^5.2.0",
-    "eslint-plugin-node": "^7.0.1",
-    "loader.js": "^4.7.0"
+    "@ember/optional-features": "0.7.0",
+    "broccoli-asset-rev": "3.0.0",
+    "ember-cli": "3.8.1",
+    "ember-cli-dependency-checker": "3.1.0",
+    "ember-cli-eslint": "5.1.0",
+    "ember-cli-htmlbars": "3.0.1",
+    "ember-cli-htmlbars-inline-precompile": "2.1.0",
+    "ember-cli-inject-live-reload": "2.0.1",
+    "ember-cli-sri": "2.1.1",
+    "ember-cli-template-lint": "1.0.0-beta.1",
+    "ember-cli-uglify": "2.1.0",
+    "ember-disable-prototype-extensions": "1.1.3",
+    "ember-export-application-global": "2.0.0",
+    "ember-load-initializers": "2.0.0",
+    "ember-maybe-import-regenerator": "0.1.6",
+    "ember-qunit": "4.4.1",
+    "ember-resolver": "5.1.3",
+    "ember-source": "3.8.0",
+    "ember-source-channel-url": "1.1.0",
+    "ember-try": "1.1.0",
+    "eslint-plugin-ember": "6.2.0",
+    "eslint-plugin-node": "8.0.1",
+    "loader.js": "4.7.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
